added delete item

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-
-input,textarea{
-    border: 1px solid gray;
+input,
+textarea {
+  border: 1px solid gray;
 }
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
